[package]
name = "android_clipboard"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/podusowski/android_clipboard"
description = "Access Android clipboard"
categories = ["gui"]
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
license = "MIT"

[dependencies]
thiserror = "2.0.9"
ndk-context = "0.1"
jni = "0.21"
